<resources>
    <string name="app_name">SSE-FISI</string>

    <!--Others-->
    <string name="Home">Inicio</string>
    <string name="valorateFormation">Valorar Formación Académica</string>
    <string name="valorateService">Valorar Servicios Académicos</string>
    <string name="about">Acerca del SSE</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>

    <!--Login Activity-->
    <string name="subtitle">Sistema de Seguimiento de Egresados</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Entrar</string>
    <string name="forgot_password">Olvidé mi contraseña</string>

    <!--Home Activity-->
    <string name="user">RAMIREZ ESPINOZA, JUAN GABRIEL</string>
    <string name="personalData">Datos Personales</string>
    <string name="idTitle">Doc. de Identidad:</string>
    <string name="birthdayTitle">Fecha de Nac. :</string>
    <string name="maritalStatusTitle">Estado Civil:</string>
    <string name="addressTitle">Dirección:</string>
    <string name="seemore">Ver más</string>

    <string name="undergraduateData">Formación Académica</string>
    <string name="univName">Universidad Nacional Mayor de San Marcos</string>
    <string name="major">Ingeniería de Software</string>
    <string name="majorDate">2014-2019</string>

    <string name="postgraduateData">Estudio de Postgrado y/o Especialización</string>
    <string name="course">Maestría en Ingeniería de Software</string>
    <string name="courseDate">2020-2021</string>

    <string name="laboralData">Experiencia Laboral</string>
    <string name="enterpriseName">Graña y Montero</string>
    <string name="workName">Analista de Sistemas</string>
    <string name="hireDate">2019-2021</string>

    <!--Personal Data -->
    <string name="name">Nombre</string>
    <string name="id">Doc. de Identidad</string>
    <string name="birthday">Fecha de Nac.</string>
    <string name="birthplace">Lugar de Nac.</string>
    <string name="maritalStatus">Estado Civil</string>
    <string name="numberChildrens">Número de Hijos</string>
    <string name="address">Dirección</string>
    <string name="geoLocation">Lugar de Residencia</string>
    <string name="department">Departamento</string>
    <string name="province">Provincia</string>
    <string name="district">Distrito</string>
    <string name="phone">Teléfono Fijo</string>
    <string name="cellphone">Teléfono Móvil</string>
    <string name="personalEmail">Correo electrónico personal</string>
    <string name="laboralEmail">Correo electrónico laboral</string>

    <!--Undergraduate-->
    <string name="ugdtUnivName">Institución</string>
    <string name="ugdtSchool">Escuela Profesional</string>
    <string name="ugdtCode">Código de alumno</string>
    <string name="ugdtStartYear">Fecha de Ingreso</string>
    <string name="ugdtEndDate">Fecha de Egreso</string>
    <string name="ugdtGradeDate">Fecha de expedición de grado</string>
    <string name="ugdtTitleDate">Fecha de expedición de titulo</string>
    <string name="ugdtMerit">Mérito</string>
    <string name="ugdtMode">Modalidad</string>
    <string name="ugdtTuition">Colegio Profesional</string>
    <string name="ugdtTuitionNumber">Numero de Colegiatura</string>

    <!--Postgraduate-->
    <string name="pgdtInstType">Tipo de Institución</string>
    <string name="pgdtAcadProg">Programa Académico</string>
    <string name="pgdtProgType">Tipo de Programa</string>
    <string name="pgdtCertDate">Fecha de Certificación</string>
    <string name="pgdtLectivesHour">Horas Lectivas</string>
    
    <!--Laboral Data-->
    <string name="economicActivity">Actividad Económica</string>
    <string name="area">Área</string>
    <string name="jobTitle">Cargo</string>
    <string name="startDate">Fecha de Inicio</string>
    <string name="endDate">Fecha de Fin</string>
    <string name="serviceTime">Tiempo de Servicio</string>
    <string name="Salary">Contraprestación Mensual</string>
    <string name="Time">Dedicación</string>
    <string name="Contract">Tipo de Contrato</string>
    <string name="profRelation">Relación a su formación</string>
    <string name="function">Funciones Principales</string>
    <string name="media">Medio por el cual consiguio el empleo</string>
    <string name="Satisfaction">Nivel de Satisfacción</string>
    <string name="endJob">Motivo de Cese</string>


</resources>
