<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josand.sse_fisi.UI.LaboralData.LaboralDataEdit">

    <ScrollView
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/labFooter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/labEditInstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ugdtUnivName" />

            <EditText
                android:id="@+id/labInstType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pgdtInstType" />

            <EditText
                android:id="@+id/labEditEcoActType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/economicActivity" />

            <EditText
                android:id="@+id/labArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area" />

            <EditText
                android:id="@+id/labJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jobTitle" />

            <EditText
                android:id="@+id/labEditStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/startDate" />

            <EditText
                android:id="@+id/ugdtEditEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endDate" />

            <EditText
                android:id="@+id/labEditServiceTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serviceTime" />

            <EditText
                android:id="@+id/labSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Salary" />

            <EditText
                android:id="@+id/labTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Time" />

            <EditText
                android:id="@+id/labContract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Contract" />

            <EditText
                android:id="@+id/labProfRelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profRelation" />

            <EditText
                android:id="@+id/labFunctions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/function" />

            <EditText
                android:id="@+id/labMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/media" />

            <EditText
                android:id="@+id/labSatisfaction"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Satisfaction" />

            <EditText
                android:id="@+id/labEndJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endJob" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/labFooter"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/pgdtEditSave"
            android:text="@string/save"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/pgdtEditDelete"
            android:text="@string/delete"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</RelativeLayout>
