<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josand.sse_fisi.UI.PersonalData.PersonalDataEdit">

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pdEditSaveButton">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/pdEditMaritalStatus"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/pdEditNumberChildrens"
                android:hint="@string/numberChildrens"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/pdEditAddress"
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/geoLocation"
                android:textColor="@color/md_grey_700"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/pdEditDepartment"
                    android:hint="@string/department"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <Spinner
                    android:id="@+id/pdEditProvince"
                    android:hint="@string/province"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/pdEditDistrict"
                android:hint="@string/district"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/pdEditPhone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/pdEditCellPhone"
                android:hint="@string/cellphone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/pdEditPersonalEmail"
                android:hint="@string/personalEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/pdEditLaboralEmail"
                android:hint="@string/laboralEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/pdEditSaveButton"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
